--- a/dist2/index.html
+++ b/dist2/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/Vite_Demo_HomePage/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>React + TypeScript + Replit</title>
-    <script type="module" crossorigin src="/assets/index.4a415cd4.js"></script>
-    <link rel="stylesheet" href="/assets/index.93f00edf.css">
+    <script type="module" crossorigin src="/Vite_Demo_HomePage/assets/index.4a415cd4.js"></script>
+    <link rel="stylesheet" href="/Vite_Demo_HomePage/assets/index.93f00edf.css">
   </head>
   <body>
     <div id="root"></div>
