① 添加了，新的论语文本。

--- a/dist2/index.html
+++ b/dist2/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/Vite_Demo_HomePage/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>React + TypeScript + Replit</title>
-    <script type="module" crossorigin src="/Vite_Demo_HomePage/assets/index.cab5425a.js"></script>
+    <script type="module" crossorigin src="/Vite_Demo_HomePage/assets/index.798c45e5.js"></script>
     <link rel="modulepreload" crossorigin href="/Vite_Demo_HomePage/assets/text-1_ravro-ir_awesome-hacking-resources____几本书籍.md_raw.da513d58.js">
     <link rel="modulepreload" crossorigin href="/Vite_Demo_HomePage/assets/text-2_theredditbandit_awesome-cybersec____一些书籍_博客_社区等.md_raw.bdf06586.js">
     <link rel="modulepreload" crossorigin href="/Vite_Demo_HomePage/assets/text-3_dk47os3r_hongduiziliao____格式倒是很乱.md_raw.e4d61833.js">
@@ -75,6 +75,7 @@
     <link rel="modulepreload" crossorigin href="/Vite_Demo_HomePage/assets/text-龙族2_悼亡者之瞳.txt_raw.b4939b8c.js">
     <link rel="modulepreload" crossorigin href="/Vite_Demo_HomePage/assets/text-龙族3_黑月之潮.txt_raw.26530df4.js">
     <link rel="modulepreload" crossorigin href="/Vite_Demo_HomePage/assets/text-龙族前传_哀悼之翼.txt_raw.db416aba.js">
+    <link rel="modulepreload" crossorigin href="/Vite_Demo_HomePage/assets/text-论语.txt_raw.b57c0580.js">
     <link rel="modulepreload" crossorigin href="/Vite_Demo_HomePage/assets/text-【Azure相关的CheckList，似乎更偏向 零信任模型】安全性设计审查清单 - Microso 1363a3c3a40281fb8880cccfee812896.md_raw.a1f2b03c.js">
     <link rel="modulepreload" crossorigin href="/Vite_Demo_HomePage/assets/text-【GitLab的核心源码-代码审查指南】代码审查指南 GitLab 手册 1363a3c3a40281258e5af6f6e3873605.md_raw.00896672.js">
     <link rel="modulepreload" crossorigin href="/Vite_Demo_HomePage/assets/text-【一个开源合规调查清单，但过于简略了——进入页面】_电子书_ 开源尽职调查清单 Black Duck 1373a3c3a40281c89310f495b1e359f2.md_raw.68c7e70b.js">
